Moved GLL to 10 col layout

--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -58,19 +58,19 @@
     </nav>
 
     <main role="main">
-      <div style="position: relative; height: 57.5px; background-color: black"></div>
+      <div style="position: relative; height: 57.5px;"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container">
-          <div class = "row d-flex justify-content-center">
-            <h3>Great Lakes Legends</h3>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p>A group project to inspire local engagement with the Great Lakes Region.</p>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p><b>Role:</b> Product Designer<br>
-            <b>Techniques:</b> Brainstorming, Iterative Prototyping<br>
-            <b>Timeframe:</b> 4-hour Workshop</p>
+          <div class="row justify-content-center">
+            <div class="col-sm-10 col-center">
+              <h1>Great Lakes Legends</h1>
+              <p>A group project to inspire local engagement with the Great Lakes Region.</p>
+              <p>
+                <span style="color: #673AB7; font-weight: 500;">Role:</span> Product Designer<br>
+                <span style="color: #673AB7; font-weight: 500;">Techniques:</span> Brainstorming, Iterative Prototyping<br>
+                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> 4-hour Workshop
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -89,107 +89,125 @@
 
     <div class="container">
 
-      <div class="row">
-        <div class="col-sm-12">
+      <div class="row justify-content-center">
+        <div class="col-sm-10 mb-5">
           <h4 class="project-section-header" id="summary">SUMMARY</h4>
         </div>
       </div>
-      <div class="project-page-card">
-        <div class="row">
-          <div class="col-lg-6 col-sm-12">
-            <p>
-              UM’s School of Information partnered with the Center for Socially Engaged Design to help the upcoming Library of the Great Lakes brainstorm ways it could serve the public. The challenge posed to students was to “design a new way to create access to resources that inspire public engagement and enhance understanding of the Great Lakes region, via a library without walls.” My group and I were able to meet several of the stakeholders who attended the Design Jam, and they were all extremely passionate about their mission. They wanted to build a love for the region with the Library by helping people feel more connected to their geographic location. <br><br>
-              My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the stakeholders voted our prototype the winner!
-            </p>
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/group photo.jpg" style="width: 100%">
-          </div>
+
+      <div class="row justify-content-center">
+        <div class="col-sm-10 mb-5">
+          <p>
+            UM’s School of Information partnered with the Center for Socially Engaged Design to help the upcoming Library of the Great Lakes brainstorm ways it could serve the public. The challenge posed to students was to “design a new way to create access to resources that inspire public engagement and enhance understanding of the Great Lakes region, via a library without walls.” My group and I were able to meet several of the stakeholders who attended the Design Jam, and they were all extremely passionate about their mission. They wanted to build a love for the region with the Library by helping people feel more connected to their geographic location.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-lg-5 col-sm-12">
+          <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the stakeholders voted our prototype the winner!</p>
+        </div>
+        <div class="col-lg-5 col-sm-12">
+          <img src="../assets/Great Lakes Legends/group photo.jpg" style="width: 100%">
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-12">
+
+      <div class="row justify-content-center project-section">
+        <div class="col-sm-10 mb-5">
           <h4 class="project-section-header" id="designProcess">DESIGN PROCESS</h4>
         </div>
       </div>
-      <div class="project-page-card">
-        <div class="row">
-          <div class="col-lg-6 col-sm-12">
-            <p>
-              At the start of the Design Jam we were introduced to each of the stakeholders and the challenge they had for us. Their backgrounds were very diverse, from professional chefs to UM faculty, but each of them had a strong personal connection to the Great Lakes region. They all truly cared about taking care and of the land and water, and they wanted the Library to help others feel the same way.
-            </p>
-            <p>
-              However, they didn’t want to feel constrained to just constructing four walls and a roof for a bunch of books. They were inspired by the openness of the Museum of the Rockies and the New York Public Library, and wanted help brainstorming similar solutions. Our group was given five minutes to generate as many “how might we” questions as we could to address creating a library without walls and wrote them all out on sticky notes.
-            </p>
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/hmw.jpg" style="width: 100%">
-          </div>
-          <div class="col-lg-4 col-sm-12">
-            <p>
-              We clumped all our ideas into groups, and then voted to pick one “how might we” question to move forward with. We decided on “How might we make the information interactive?”. Then we were given five more minutes to generate as many ideas as we could to answer that question. I created eight of our group's 50 ideas, and then we cast votes again to decide which was best. The winning idea was to create a tool to let people tell their own stories about the Great Lakes region.
-            </p>
-          </div>
-          <div class="col-lg-4 col-sm-6 col-xs-12">
-            <img src="../assets/Great Lakes Legends/hmw winner.jpg" style="width: 100%">
-          </div>
-          <div class="col-lg-4 col-sm-6 col-xs-12">
-            <img src="../assets/Great Lakes Legends/idea groupings.jpg" style="width: 100%">
-          </div>
-          <div class="col-sm-12">
-            <p>
-              Then we had 15 minutes for our first round of prototyping. Our idea started to come together through a few rough sketches we collaborated on. After we had a few wireframes created the stakeholders dropped by our table to give some feedback and I walked them through what we had so far. We were given another 15 minutes to incorporate their feedback and improve the design. After we chatted about the changes we should make and how the final prototype should function two of us started creating the final color wireframes, another constructed some props for our demo, and I drafted up a logo for our design.
-            </p>
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/initial wireframes.jpg" style="width: 100%">
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/final wireframes.jpg" style="width: 100%">
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-sm-10 mb-5">
+          <p>
+            At the start of the Design Jam we were introduced to each of the stakeholders and the challenge they had for us. Their backgrounds were very diverse, from professional chefs to UM faculty, but each of them had a strong personal connection to the Great Lakes region. They all truly cared about taking care and of the land and water, and they wanted the Library to help others feel the same way.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-5 col-sm-12 mb-5">
+          <p>
+            However, they didn’t want to feel constrained to just constructing four walls and a roof for a bunch of books. They were inspired by the openness of the Museum of the Rockies and the New York Public Library, and wanted help brainstorming similar solutions. Our group was given five minutes to generate as many “how might we” questions as we could to address creating a library without walls and wrote them all out on sticky notes.
+          </p>
+        </div>
+        <div class="col-md-5 col-sm-12 mb-5">
+          <img src="../assets/Great Lakes Legends/hmw.jpg" style="width: 100%">
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12 mb-5">
+          <p>
+            We clumped all our ideas into groups, and then voted to pick one “how might we” question to move forward with. We decided on “How might we make the information interactive?”. Then we were given five more minutes to generate as many ideas as we could to answer that question. I created eight of our group's 50 ideas, and then we cast votes again to decide which was best. The winning idea was to create a tool to let people tell their own stories about the Great Lakes region.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
+          <img src="../assets/Great Lakes Legends/hmw winner.jpg" style="width: 100%">
+        </div>
+        <div class="col-lg-5 col-sm-6 col-xs-12 mb-5">
+          <img src="../assets/Great Lakes Legends/idea groupings.jpg" style="width: 100%">
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12 mb-5">
+          <p>
+            Then we had 15 minutes for our first round of prototyping. Our idea started to come together through a few rough sketches we collaborated on. After we had a few wireframes created the stakeholders dropped by our table to give some feedback and I walked them through what we had so far. We were given another 15 minutes to incorporate their feedback and improve the design. After we chatted about the changes we should make and how the final prototype should function two of us started creating the final color wireframes, another constructed some props for our demo, and I drafted up a logo for our design.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-sm-12">
+          <img src="../assets/Great Lakes Legends/initial wireframes.jpg" style="width: 100%">
+        </div>
+        <div class="col-lg-5 col-sm-12">
+          <img src="../assets/Great Lakes Legends/final wireframes.jpg" style="width: 100%">
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-12">
+      <div class="row justify-content-center project-section">
+        <div class="col-sm-10 mb-5">
           <h4 class="project-section-header" id="finalPrototype">FINAL PROTOTYPE</h4>
         </div>
       </div>
-      <div class="project-page-card">
-        <div class="row">
-          <div class="col-md-6 col-sm-12">
-            <p>
-              Our team’s goal for approaching this challenge was to find a way to make the Library’s information interactive, and, most importantly, allow people to tell their own stories. We wanted to get people outside to experience the library, and we thought AR tech could help.
-            </p>
-            <p>
-              We combined an earlier idea, AR guided tours, with our storytelling idea, and started designing something to attach stories to places in the real world. These stories could be text, pictures, audio, or video, and could be created by the Library or regular users. I suggested letting users reply to those stories for others to see later so they could create a multimedia thread of shared experiences.
-            </p>
-            <p>
-              The app could show users where nearby stories are, as well as notify them if they’re approaching one. A “badge” system could be used to encourage users to travel to all the areas of the Great Lakes region, and the Library could create tours to help users view all their curated content in a local area.
-            </p>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/final prototype.jpg" style="width: 100%">
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12 mb-5">
+          <p>
+            Our team’s goal for approaching this challenge was to find a way to make the Library’s information interactive, and, most importantly, allow people to tell their own stories. We wanted to get people outside to experience the library, and we thought AR tech could help.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-5 col-sm-12 mb-5">
+          <p>
+            We combined an earlier idea, AR guided tours, with our storytelling idea, and started designing something to attach stories to places in the real world. These stories could be text, pictures, audio, or video, and could be created by the Library or regular users. I suggested letting users reply to those stories for others to see later so they could create a multimedia thread of shared experiences.
+          </p>
+        </div>
+        <div class="col-md-5 col-sm-12 mb-5">
+          <img src="../assets/Great Lakes Legends/final prototype.jpg" style="width: 100%">
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12">
+          <p>
+            The app could show users where nearby stories are, as well as notify them if they’re approaching one. A “badge” system could be used to encourage users to travel to all the areas of the Great Lakes region, and the Library could create tours to help users view all their curated content in a local area.
+          </p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-12">
+      <div class="row justify-content-center project-section">
+        <div class="col-sm-10 mb-5">
           <h4 class="project-section-header" id="reflection">REFLECTION</h4>
         </div>
       </div>
-      <div class="project-page-card">
-        <div class="row">
-          <div class="col-lg-6 col-sm-12">
-            <p>
-              Working on this challenge to help with the Library of the Great Lakes was incredibly rewarding for me. It helped me practice my design and brainstorming skills in a fast-paced but easy-going setting, and my group members were great people to work with. It was also great to work with the stakeholders who care so much about the Great Lakes. As a kid I grew up in Michigan spending my summers in lakes and forests, and I care deeply about them too. I think northern Michigan is one of the most beautiful places in the world, and I had a ton of fun designing a product to help others see it the same way.
-            </p>
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <img src="../assets/Great Lakes Legends/reflection landscape.jpg" style="width: 100%">
-          </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-lg-5 col-sm-12">
+          <p>
+            Working on this challenge to help with the Library of the Great Lakes was incredibly rewarding for me. It helped me practice my design and brainstorming skills in a fast-paced but easy-going setting, and my group members were great people to work with. It was also great to work with the stakeholders who care so much about the Great Lakes. As a kid I grew up in Michigan spending my summers in lakes and forests, and I care deeply about them too. I think northern Michigan is one of the most beautiful places in the world, and I had a ton of fun designing a product to help others see it the same way.
+          </p>
+        </div>
+        <div class="col-lg-5 col-sm-12">
+          <img src="../assets/Great Lakes Legends/reflection landscape.jpg" style="width: 100%">
         </div>
       </div>
 
