Changing autodesk project width

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -29,6 +29,13 @@
 
     <title>Jackson Hammond</title>
 
+    <!-- Real quick shortcut for purposes of getting this done -->
+    <style>
+      .project-container {
+        max-width: 950px;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -60,7 +67,7 @@
     <main role="main">
       <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
-        <div class = "container">
+        <div class = "container project-container">
           <div class = "row d-flex justify-content-center">
             <h3>Consulting with Autodesk</h3>
           </div>
@@ -75,7 +82,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container project-container">
         <div class="row">
           <div class="col-sm-12">
             <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
