--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -68,16 +68,16 @@
       <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container project-container">
-          <div class = "row d-flex justify-content-center">
-            <h3>Consulting with Autodesk</h3>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p><b>Role:</b> UX Researcher and Usability Tester<br>
-            <b>Tools:</b> Revit LT<br>
-            <b>Timeframe:</b> Jan. 2019 - Apr. 2019</p>
+          <div class = "row">
+            <div class="col-sm-12">
+              <h1>Consulting with Autodesk</h1>
+              <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
+              <p>
+                <span style="color: #673AB7; font-weight: 500;">Role:</span> UX Researcher and Usability Tester<br>
+                <span style="color: #673AB7; font-weight: 500;">Tools:</span> Revit LT<br>
+                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> Jan. 2019 - Apr. 2019
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
       <div class="container project-container">
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
+            <h4 class="project-section-header mb-5" id="placeHolder">PROJECT SUMMARY</h4>
           </div>
         </div>
         <div class="project-page-card">
