--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -29,6 +29,13 @@
 
     <title>Jackson Hammond</title>
 
+    <!-- Real quick shortcut for purposes of getting this done -->
+    <style>
+      .project-container {
+        max-width: 950px;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -60,17 +67,17 @@
     <main role="main">
       <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
-        <div class = "container">
+        <div class = "container project-container">
           <div class = "row d-flex justify-content-center">
-            <h3>Consulting with the MSGC</h3>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p>A group project focused on user research and qualitative data analysis.</p>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p><b>Role:</b> Experience Researcher, Customer Liaison<br>
-            <b>Tools:</b> Contextual Inquiry<br>
-            <b>Timeframe:</b> Sep. 2018 - Dec. 2018</p>
+            <div class="col-sm-12">
+              <h1>Consulting with the MSGC</h1>
+              <p>A group project focused on user research and qualitative data analysis.</p>
+              <p>
+                <span style="color: #673AB7; font-weight: 500;">Role:</span> Experience Researcher, Customer Liaison<br>
+                <span style="color: #673AB7; font-weight: 500;">Tools:</span> Contextual Inquiry<br>
+                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> Sep. 2018 - Dec. 2018
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -86,11 +93,11 @@
       </table>
     </div>
 
-    <div class="container">
+    <div class="container project-container">
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="researchMethods">RESEARCH METHODS</h4>
+          <h4 class="project-section-header mb-5" id="researchMethods">RESEARCH METHODS</h4>
         </div>
       </div>
       <div class="project-page-card">
@@ -109,7 +116,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="analysis">ANALYSIS</h4>
+          <h4 class="project-section-header mb-5" id="analysis">ANALYSIS</h4>
         </div>
       </div>
       <div class="project-page-card">
@@ -138,7 +145,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="conclusions">CONCLUSIONS</h4>
+          <h4 class="project-section-header mb-5" id="conclusions">CONCLUSIONS</h4>
         </div>
       </div>
       <div class="project-page-card">
