Changed visualizations project to new skinny layout

--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -29,6 +29,13 @@
 
     <title>Jackson Hammond</title>
 
+    <!-- Real quick shortcut for purposes of getting this done -->
+    <style>
+      .project-container {
+        max-width: 950px;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -60,17 +67,17 @@
     <main role="main">
       <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
-        <div class = "container">
-          <div class = "row d-flex justify-content-center">
-            <h3>Exercise Visualizations</h3>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p>A solo project to practice some basic data visualization techniques.</p>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p><b>Role:</b> Data Visualization Analyst<br>
-            <b>Tools:</b> R, RStudio, Adobe Illustrator, Adobe After Effects<br>
-            <b>Timeframe:</b> Oct. 2018 - Dec. 2018</p>
+        <div class = "container project-container">
+          <div class = "row">
+            <div class="col-sm-12">
+              <h1>Exercise Visualizations</h1>
+              <p>A solo project to practice some basic data visualization techniques.</p>
+              <p>
+                <span style="color: #673AB7; font-weight: 500;">Role:</span> Data Visualization Analyst<br>
+                <span style="color: #673AB7; font-weight: 500;">Tools:</span> R, RStudio, Adobe Illustrator, Adobe After Effects<br>
+                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> Oct. 2018 - Dec. 2018
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -85,19 +92,19 @@
       </table>
     </div>
 
-    <div class="container">
+    <div class="container project-container">
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="benchProgrss">BENCHING PROGRESS</h4>
+          <h4 class="project-section-header mb-5" id="benchProgrss">BENCHING PROGRESS</h4>
         </div>
       </div>
       <div class="project-page-card">
         <div class="row">
           <div class="col-sm-12">
-            <p>I've been using the same app to track my strength training workouts for almost two years, but I realized it lets me export my data to a .csv file! I thought I'd try using R to visualize some trends in my workouts, and to help keep me motivated and pushing for progress each month.<br><br>
-            Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations"  target="_blank">here</a> on Github.<br><br>
-            I just started a new benching routine, so I thought that data would be a good place to start practicing with the ggplot() function. It's a three day per week routine, and I do fewer reps with higher weight as the week goes on. First it's sets at 70% of my "one-rep max" on Monday, then 75% on Wednesday, and 80% on Fridays.
+            <p>I've been using the same app to track my strength training workouts for almost two years, but I realized it lets me export my data to a .csv file! I thought I'd try using R to visualize some trends in my workouts, and to help keep me motivated and pushing for progress each month.</p>
+            <p>Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations"  target="_blank">here</a> on Github.</p>
+            <p>I just started a new benching routine, so I thought that data would be a good place to start practicing with the ggplot() function. It's a three day per week routine, and I do fewer reps with higher weight as the week goes on. First it's sets at 70% of my "one-rep max" on Monday, then 75% on Wednesday, and 80% on Fridays.
             </p>
             <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
             <p>
@@ -111,7 +118,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="sankeyDiagram">SANKEY DIAGRAMS</h4>
+          <h4 class="project-section-header mb-5" id="sankeyDiagram">SANKEY DIAGRAMS</h4>
         </div>
       </div>
       <div class="project-page-card">
