Added some emphasis

--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -104,7 +104,7 @@
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-5 col-sm-12">
-          <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the stakeholders voted our prototype the winner!</p>
+          <p>My group and I prototyped a tool that uses augmented reality to encourage people to witness the beautiful Great Lakes landscapes for themselves. We wanted to create a way for users to experience the stories the Library can tell and provide a way for them to add on their own personal stories for others. At the end of the Design Jam the <span style="color: #673AB7; font-weight: 500;">stakeholders voted our prototype the winner!</span></p>
         </div>
         <div class="col-lg-5 col-sm-12">
           <img src="../assets/Great Lakes Legends/group photo.jpg" style="width: 100%">
