small about me changes

--- a/About.html
+++ b/About.html
@@ -60,9 +60,10 @@
       <div class = "container" style = "margin-top:100px">
         <div class = "row">
           <div class = "col-sm-6">
-            <p>I’m a designer who cares about the environment, privacy, and which book to read next. I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships. I believe UX design is a way I can satisfy my desire to create beautiful things, make a positive impact on the world, and build experiences that bring people joy.</p>
+            <p>Hi, I’m <span style="color: #673AB7; font-weight: 500;">Jackson</span>, a designer who cares about <span style="color: #673AB7; font-weight: 500;">the environment</span>, <span style="color: #673AB7; font-weight: 500;">privacy</span>, and <span style="color: #673AB7; font-weight: 500;">which book to read next.</span></p>
+            <p>I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships. I believe UX design is a way I can satisfy my desire to create beautiful things, make a positive impact on the world, and build experiences that bring people joy.</p>
 
-            <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine the design principles I’m learning with my technical background to find innovative ways to present complicated data to people.</p>
+            <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a>. I’m hoping to combine the design principles I’m learning with my technical background to find innovative ways to present complicated data to people.</p>
 
             <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drumset.</p>
 
